--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -2,6 +2,7 @@ FROM multiarch/alpine:aarch64-v3.6 AS builder
 
 RUN apk update && apk add curl
 
+RUN curl -o kubectl1.14 -L https://storage.googleapis.com/kubernetes-release/release/v1.14.0/bin/linux/arm64/kubectl
 RUN curl -o kubectl1.9 -L https://storage.googleapis.com/kubernetes-release/release/v1.9.0/bin/linux/arm64/kubectl
 RUN curl -o kubectl1.6 -L https://storage.googleapis.com/kubernetes-release/release/v1.6.0/bin/linux/arm64/kubectl
 
@@ -11,10 +12,11 @@ FROM multiarch/alpine:aarch64-v3.6
 RUN apk add --update bash
 
 #copy both versions of kubectl to switch between them later.
-COPY --from=builder kubectl1.9 /usr/local/bin/kubectl
+COPY --from=builder kubectl1.14 /usr/local/bin/kubectl
+COPY --from=builder kubectl1.9 /usr/local/bin/
 COPY --from=builder kubectl1.6 /usr/local/bin/
 
-RUN chmod +x /usr/local/bin/kubectl /usr/local/bin/kubectl1.6
+RUN chmod +x /usr/local/bin/kubectl /usr/local/bin/kubectl1.9 /usr/local/bin/kubectl1.6
 
 WORKDIR /
 
